Package.json: Added sctript definition for development(dev) environment using nodemon. \n app.js: Updated to add initial libraries imports for start server. Closes: #1 and #2.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project for BossaBox Interview",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
