--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Project for BossaBox Interview",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "test": "mocha --watch app/**/*.js",
+    "dev-test": "mocha app/test/*.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,8 @@
     "mongoose": "^5.6.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
