--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.0"
+    "mongoose": "^5.6.0",
+    "swagger-ui-express": "^4.0.6"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
