Added JWT auth. resolves #1, resolves #2, resolves #3, resolves #4 and resolves #8

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fr3d3rico/express-mongo-jwt#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
