Modify mongo IP.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SERVER_HOST=localhost
 SERVER_PORT=3000
 SERVER_API_URL=/v1
 
-DB_HOST=localhost
+DB_HOST=172.17.0.2
 DB_NAME=bossa-test
 DB_PORT=27017
 
