--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "swagger-ui-express": "^4.0.6"
   },
   "devDependencies": {
+    "assert": "^2.0.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "supertest": "^4.0.2"
