Add cryptorjs for encode token for client side. The issue was opened for use bcrypt. Resolves #19

--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@ DB_HOST=localhost
 DB_NAME=bossa-test
 DB_PORT=27017
 
+CRYPTOR_SECRET=crypt0r
+
 SECRET_KEY=secretkey
 HEADER_TOKEN_NAME=x-access-token
